# Nmap Changelog ($Id$); -*-text-*-

o The --exclude and --excludefile options can be used together now. [David]

o [NSE] Added the script http-apache-negotiation that detects if the Apache
  module mod_negotiate is enabled. [Hani Benhabiles]

o [NSE] Applied patch that corrects an issue where the http-method-tamper
  script would fail to properly detect JBoss servers vulnerable to the
  CVE-2010-0738 vulnerability. [Hani Benhabiles]

o [NSE] Added a new httpspider library and the script http-email-harvest that
  collects e-mail addresses by spidering a website. [Patrik]

o [NSE] Added support for detecting whether a http connection was established
  using SSL or not by the http.lua library [Patrik]

o [NSE] Applied patch that replaces a number of GET requests to HEAD in http-
  fingerprints.lua where no matching was performed on the returned contents.
  [Hani Benhabiles]

o [NSE] Applied patch to the ssl-cert script that adds support for getting SSL
  certificates from FTP servers. [Matt Selsky]

o [NSE] Added the a Vuze library, port probe and the script vuze-dht-info. The
  script connects to a Vuze node and gets protocol, vendor and network
  information. [Patrik]

o [Nping] The --safe-payloads option is now default. Added --include-payloads
  for special situations. [Colin Rice]

o [NSE] Added the script reverse-index that creates creates a reverse index
  showing which hosts run a particular service rather than the services for
  each host. [Patrik]

o [NSE] Added whitelist capabilities to the unusual-port script to be able
  to handle legitimate services on dynamic ports and discrepancies between
  names of services. [Patrik]

o [NSE] Added the script unusual-port that compares a detected service on a
  port against the expected service listed in nmap-services [Patrik]

o [NSE] Added the script broadcast-sybase-asa-discover that discovers Sybase
  SQL Anywhere servers on the LAN. [Patrik]

o Added a probe for Sybase SQL Anywhere. [Patrik]
